--- a/src/DotnetSpider.Sample/DotnetSpider.Sample.csproj
+++ b/src/DotnetSpider.Sample/DotnetSpider.Sample.csproj
@@ -20,6 +20,8 @@
     </ItemGroup>
     <ItemGroup>
         <PackageReference Include="Confluent.Kafka" Version="1.0.0-RC4" />
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.2.0" />
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="2.2.0" />
         <PackageReference Include="xunit" Version="2.4.1" />
     </ItemGroup>
 
