Added:     Generic Spider     Generic Data Parser Fixed bug in HttpProxyPool: proxy key mismatch and not removed/added correctly.

--- a/src/DotnetSpider.Sample/DotnetSpider.Sample.csproj
+++ b/src/DotnetSpider.Sample/DotnetSpider.Sample.csproj
@@ -13,7 +13,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <Content Include="appsettings.json">
+        <Content Include="appsettings1.json">
             <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </Content>
