--- a/src/DotnetSpider/DotnetSpider.csproj
+++ b/src/DotnetSpider/DotnetSpider.csproj
@@ -3,8 +3,8 @@
     <PropertyGroup>
         <TargetFrameworks>netstandard2.0;net452;</TargetFrameworks>
         <LangVersion>latest</LangVersion>
-        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-        <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
+        <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
+        <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
         <Version>4.0.5</Version>
         <Authors>zlzforever@163.com;</Authors>
         <Copyright>Copyright 2018 Lewis Zou</Copyright>
